online_judge/usermodule/static/all_submissions/372/error_1.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/372/codefile_1.cpp:1:1: error: ‘ggg’ does not name a type
 ggg
 ^~~
